feat: improve batch download with retry, stealth mode, Docker support

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,13 @@ WEBHOOK_PORT=3000
 # Untuk upload file sampai 2GB, jalankan local Bot API server
 # Kosongkan jika ingin pakai server Telegram default (max 50MB)
 BOT_API_URL=http://localhost:8081
+
+# ========== EXTRACTOR MODE ==========
+# Pilih metode ekstraksi video:
+# - puppeteer : Menggunakan browser (lebih reliable, tapi lambat)
+# - ytdlp     : Menggunakan yt-dlp (sangat cepat, butuh install yt-dlp)
+# Install yt-dlp: pip install yt-dlp atau winget install yt-dlp
+EXTRACTOR_MODE=puppeteer
+
+# Path ke yt-dlp executable (opsional, default: yt-dlp)
+# YTDLP_PATH=C:/path/to/yt-dlp.exe
